<resources>
    <string name="app_name">Movie Finder App</string>
    <string name="email_or_username">email or username</string>
    <string name="password">password</string>
    <string name="todo">TODO</string>
    <string name="sign_up_now">SIGN UP NOW</string>
    <string name="login">LOGIN</string>
    <string name="don_t_have_an_account">DON\'T HAVE AN ACCOUNT?</string>
    <string name="sign_up">SIGN UP</string>
    <string name="sign_up_button">SIGN UP</string>
    <string name="email">email</string>
    <string name="and_be_the_first_to_be_informed_about_the_films_that_have_been_released">and be the first to be informed about the films that have been released.</string>
    <string name="username">username</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="movies">movies</string>
    <string name="search">search</string>
    <string name="profile">profile</string>
    <string name="search_for">search for...</string>
    <string name="movie_title">Movie Title</string>
    <string name="poster">Poster</string>
    <string name="title">Title</string>
    <string name="play_trailer_image">Play Trailer Image</string>
    <string name="background_poster">Background Poster</string>
    <string name="rate">Rate</string>
    <string name="rate_value">TextView</string>
    <string name="release_date">Release Date :</string>
    <string name="overview">Overview</string>
    <string name="rate_tag">Rate :</string>
    <string name="overview_description">Overview Description</string>
    <string name="dd_mm_yyyy">DD-MM-YYYY</string>
</resources>