<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/movie_bg2"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="64dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/seyret_logo_lessround" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/username_or_email_input"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:backgroundTint="#9A9A9A"
        android:hint="@string/email_or_username"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColor="#9A9A9A"
        android:textColorHighlight="#9A9A9A"
        android:textColorHint="#9A9A9A"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        />


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/password_input"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="#9A9A9A"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColor="#9A9A9A"
        android:textColorHighlight="#9A9A9A"
        android:textColorHint="#9A9A9A"
        android:textColorLink="#FFFFFF"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_or_email_input" />


    <Button
        android:id="@+id/login_button"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textStyle="bold|italic"
        app:backgroundTint="@color/design_default_color_error"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_input" />


    <TextView
        android:id="@+id/register_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="64dp"
        android:text="@string/don_t_have_an_account"
        android:textColor="@color/white"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_button" />

    <Button
        android:id="@+id/signup_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textStyle="bold|italic"
        android:typeface="normal"
        app:layout_constraintStart_toEndOf="@id/register_text"
        app:layout_constraintTop_toBottomOf="@id/login_button" />


</androidx.constraintlayout.widget.ConstraintLayout>