<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/movie_bg2"
    tools:context=".RegisterPage">

    <TextView
        android:id="@+id/signup_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/sign_up_now"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/signup_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/and_be_the_first_to_be_informed_about_the_films_that_have_been_released"
        android:textColor="#C8C8C8"
        android:textSize="11sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_title" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/signup_username"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:backgroundTint="#9A9A9A"
        android:hint="@string/username"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColor="#9A9A9A"
        android:textColorHighlight="#9A9A9A"
        android:textColorHint="#9A9A9A"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_detail" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/signup_email"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="#9A9A9A"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColor="#9A9A9A"
        android:textColorHighlight="#9A9A9A"
        android:textColorHint="#9A9A9A"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_username" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/signup_password"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="#9A9A9A"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColor="#9A9A9A"
        android:textColorHighlight="#9A9A9A"
        android:textColorHint="#9A9A9A"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_email" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/sign_up_button"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textStyle="bold|italic"
        app:backgroundTint="@color/design_default_color_error"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_password"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>